# merge-google-photos-meta

./: .gitignore  CLAUDE.md  LICENSE  README.md  pranav-plan.md  pyproject.toml
.github/workflows/: publish.yml
docs/: TAKEOUT_CORRECTNESS.md
src/merge_google_photos_meta/: cache.py  cli.py  compare_metadata.py  discovery.py  filename_date.py  models.py  pairing.py  sidecar.py
src/merge_google_photos_meta/exiftool/: __init__.py  binary.py  errors.py  metadata.py  process.py
tests/: test_compare_metadata.py  test_discovery_cache.py  test_exiftool.py  test_filename_date.py  test_pairing.py  test_sidecar.py
